# HDF5pp

./: CMakeLists.txt  HDF5pp.pc.in  HDF5ppConfig.cmake.in  README.md  setup.py
HDF5pp/: __init__.py
develop/HDF5pp_find/: README.md
develop/HDF5pp_merge/: README.md  gen.py
develop/HDF5pp_repair/: README.md  gen.py
develop/HDF5pp_select/: README.md  select.json
docs/: HDF5pp.rst  LowFive.rst  Makefile  compile.rst  conf.py  develop.rst  index.rst  make.bat  requirements.txt  tools.rst  usage.rst
docs/examples/cppmat/: CMakeLists.txt  example.cpp
docs/examples/eigen/: CMakeLists.txt  example.cpp  example.py
docs/examples/eigen_cppmat_read/: CMakeLists.txt  example.cpp  example.hdf5  example.py
docs/examples/eigen_cppmat_write/: example.cpp
docs/examples/extendable_write/: example.cpp  example.py
docs/examples/scalar/: .gitignore  CMakeLists.txt  example.cpp
docs/examples/vector/: example.cpp
docs/examples/vector_read/: example.cpp  example.hdf5
docs/examples/vector_write/: CMakeLists.txt  example.cpp  example.py
docs/examples/xtensor/: CMakeLists.txt  example.cpp
include/: LowFive.h  example.h5
src/: CMakeLists.txt  HDF5pp.h  HDF5pp.pc.in
